--- a/index.html
+++ b/index.html
@@ -40,7 +40,28 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="teams display-flex">
+        <div class="team-img-container">
+          <img src="images/team1.png" alt="team-1" />
+          <img src="images/team2.png" alt="team-2" />
+          <img src="images/team3.png" alt="team-3" />
+          <img src="images/team4.png" alt="team-4" />
+        </div>
+        <div class="our-features">
+          <h3 class="feature-title">
+            <span id="quick-list" class="text-light-gray">Quick list</span>
+            of Our <span id="feature">Features</span>
+          </h3>
+          <p class="feature-description text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffer ed alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
