--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/architects.css" />
   </head>
   <body class="work-sans-font">
+    <!-- Header Section Start -->
     <header class="bg-light">
       <nav class="navbar display-flex">
         <h3 class="brand-name">G3 Architects</h3>
@@ -41,6 +42,7 @@
       </div>
     </header>
     <main>
+      <!--team section Start -->
       <section class="teams display-flex">
         <div class="team-img-container">
           <img src="images/team1.png" alt="team-1" />
@@ -49,7 +51,7 @@
           <img src="images/team4.png" alt="team-4" />
         </div>
         <div class="our-features">
-          <h3 class="feature-title">
+          <h3 class="section-title">
             <span id="quick-list" class="text-light-gray">Quick list</span>
             of Our <span id="feature">Features</span>
           </h3>
@@ -59,6 +61,38 @@
             humour, or randomised words which don't look even
           </p>
           <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+      <!-- feature section start -->
+
+      <!-- some facts start -->
+      <section>
+        <h3 class="section-title">Some Facts</h3>
+        <p class="text-light-gray">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
+        <div class="fact-container">
+          <div class="fact">
+            <img src="" alt="" class="fact-icon" />
+            <h4 class="fact-number"></h4>
+            <h5 class="fact-name"></h5>
+          </div>
+          <div class="fact">
+            <img src="" alt="" class="fact-icon" />
+            <h4 class="fact-number"></h4>
+            <h5 class="fact-name"></h5>
+          </div>
+          <div class="fact">
+            <img src="" alt="" class="fact-icon" />
+            <h4 class="fact-number"></h4>
+            <h5 class="fact-name"></h5>
+          </div>
+          <div class="fact">
+            <img src="" alt="" class="fact-icon" />
+            <h4 class="fact-number"></h4>
+            <h5 class="fact-name"></h5>
+          </div>
         </div>
       </section>
     </main>
