finish g3-architects website design

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G3 Architects</title>
-    <link rel="stylesheet" href="styles/architects.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body class="work-sans-font">
-    <!-- Header Section Start -->
     <header class="bg-light">
       <nav class="navbar display-flex">
-        <h3 class="brand-name">G3 Architects</h3>
+        <div class="brand-title">
+          <h2>G3 Architects</h2>
+        </div>
         <ul class="nav-links display-flex">
           <li class="nav-item">
             <a href="#" class="nav-link text-gray">Home</a>
@@ -19,7 +20,7 @@
             <a href="#" class="nav-link text-gray">About</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link text-gray">Contact Us</a>
+            <a href="#" class="nav-link text-gray">Contact us</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link text-gray">Login</a>
@@ -28,73 +29,153 @@
       </nav>
       <div class="banner">
         <div class="banner-content">
-          <h1 class="banner-title">Brand New <br />Group of Architects</h1>
-          <p class="banner-description text-light-gray">
-            There are many variations of passages of Lorem Ipsum available, but
-            the majority have suffered alteration in some form, by injected
-            humour, or randomised words which don't look even
+          <h2 class="section-title" id="banner-title">
+            Brand New <br />Group of Architects
+          </h2>
+          <p class="text-light-gray banner-discription">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius saepe
+            iusto praesentium at officia ab inventore deserunt vero,<br />
+            distinctio beatae! Lorem ipsum, dolor sit amet consectetur
+            adipisicing elit. <br />Ullam adipisci dolores doloribus expedita
+            pariatur. Rem, amet! Libero nam a ipsum?
           </p>
           <button class="btn-primary">Explore More</button>
         </div>
         <div class="banner-image">
-          <img src="images/banner.png" alt="Banner" />
+          <img src="images/banner.png" alt="" />
         </div>
       </div>
     </header>
-    <main>
-      <!--team section Start -->
+    <!-- Start  Main section -->
+    <main class="container">
+      <!--teams section  -->
       <section class="teams display-flex">
-        <div class="team-img-container">
-          <img src="images/team1.png" alt="team-1" />
-          <img src="images/team2.png" alt="team-2" />
-          <img src="images/team3.png" alt="team-3" />
-          <img src="images/team4.png" alt="team-4" />
+        <div class="team-images">
+          <img src="images/team1.png" alt="about of two architecs" />
+          <img src="images/team2.png" alt="about of two architecs" />
+          <img src="images/team3.png" alt="about of two architecs" />
+          <img src="images/team4.png" alt="about of two architecs" />
         </div>
-        <div class="our-features">
-          <h3 class="section-title">
-            <span id="quick-list" class="text-light-gray">Quick list</span>
-            of Our <span id="feature">Features</span>
-          </h3>
-          <p class="feature-description text-light-gray">
-            There are many variations of passages of Lorem Ipsum available, but
-            the majority have suffer ed alteration in some form, by injected
-            humour, or randomised words which don't look even
+        <div class="our-team-feature">
+          <h2 class="section-title">
+            <span id="quick-list" class="text-light-gray">Quick list</span> of
+            Our <span class="text-primary">Features</span>
+          </h2>
+          <p class="text-light-gray">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus
+            iusto ex ut aspernatur eius voluptate neque illo earum temporibus
+            labore id magni aperiam, quibusdam fuga quam facere accusantium sint
+            exercitationem!
           </p>
-          <button class="btn-primary">Explore More</button>
+          <button class="btn-primary">More Explore</button>
         </div>
       </section>
-      <!-- feature section start -->
+      <!-- features section -->
+      <section class="features">
+        <div class="features-content">
+          <h2 class="section-title" id="feature-border">
+            Features you will <br />love & enjoy
+          </h2>
+          <p class="text-light-gray">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quo
+            rerum, quisquam molestiae debitis, adipisci iusto ducimus saepe
+            neque, dolorem nesciunt beatae nobis. Accusamus quas, nobis ea eum
+            animi nisi?
+          </p>
+          <div class="features-card">
+            <div class="feature-card">
+              <h3 class="feature-title">Desktop & Mobile Version</h3>
+              <p class="text-light-gray feature-discription">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                odio esse perspiciatis voluptatum! Natus aliquam praesentium nam
+                unde distinctio omnis amet eligendi soluta laboriosam! Veniam
+                praesentium nisi velit voluptas explicabo.
+              </p>
+            </div>
+            <div class="feature-card">
+              <h3 class="feature-title">Drag & Drop Builder</h3>
+              <p class="text-light-gray feature-discription">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                odio esse perspiciatis voluptatum! Natus aliquam praesentium nam
+                unde distinctio omnis amet eligendi soluta laboriosam! Veniam
+                praesentium nisi velit voluptas explicabo.
+              </p>
+            </div>
+            <div class="feature-card">
+              <h3 class="feature-title">Awesome Modern Design</h3>
+              <p class="text-light-gray feature-discription">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                odio esse perspiciatis voluptatum! Natus aliquam praesentium nam
+                unde distinctio omnis amet eligendi soluta laboriosam! Veniam
+                praesentium nisi velit voluptas explicabo.
+              </p>
+            </div>
+            <div class="feature-card">
+              <h3 class="feature-title">Super Easy to Edit</h3>
+              <p class="text-light-gray feature-discription">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                odio esse perspiciatis voluptatum! Natus aliquam praesentium nam
+                unde distinctio omnis amet eligendi soluta laboriosam! Veniam
+                praesentium nisi velit voluptas explicabo.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="feature-image">
+          <div class="feature-img">
+            <img src="images/architect.png" alt="" />
+          </div>
+          <div class="feature-image-text">
+            <button class="btn-primary">
+              <span id="experince-badge">10+Years</span>
+              <br />
+              <span id="experience">Experience</span>
+            </button>
+          </div>
+        </div>
+      </section>
 
-      <!-- some facts start -->
-      <section>
-        <h3 class="section-title">Some Facts</h3>
-        <p class="text-light-gray fact-description">
-          There are many variations of passages of Lorem Ipsum available, but
-          the majority have suffered alteration.
-        </p>
-        <div class="fact-container">
-          <div class="fact-card">
+      <!-- some facts section -->
+      <section class="some-facts">
+        <div class="fact-description">
+          <h3 class="section-title">Some facts</h3>
+          <p class="text-light-gray">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque odit
+            quis exercitationem impedit culpa iusto debitis nam, soluta ut
+            natus!
+          </p>
+        </div>
+        <div class="facts-container">
+          <div class="fact-card display-flex">
             <div>
-              <img src="images/icons/ribon.png" alt="" class="fact-icon" />
+              <img
+                src="images/icons/ribon.png"
+                alt="Customers icons"
+                class="fact-icon"
+              />
               <h4 class="fact-number">54</h4>
-              <h5 class="fact-name">Awards Winnings</h5>
+              <h5 class="fact-name">Awards Winning</h5>
             </div>
           </div>
-          <div class="fact-card">
+          <div class="fact-card display-flex">
             <div>
-              <img src="images/icons/projects.png" alt="" class="fact-icon" />
+              <img
+                src="images/icons/projects.png"
+                alt="Ribon_Icon"
+                class="fact-icon"
+              />
               <h4 class="fact-number">1458</h4>
-              <h5 class="fact-name">Project Finished</h5>
+              <h5 class="fact-name">Projects Finished</h5>
             </div>
           </div>
-          <div class="fact-card">
+          <div class="fact-card display-flex">
             <div>
               <img src="images/icons/customers.png" alt="" class="fact-icon" />
               <h4 class="fact-number">590</h4>
-              <h5 class="fact-name">Clients Worked</h5>
+              <h5 class="fact-name">Clients Work</h5>
             </div>
           </div>
-          <div class="fact-card">
+          <div class="fact-card display-flex">
             <div>
               <img src="images/icons/email.png" alt="" class="fact-icon" />
               <h4 class="fact-number">22578</h4>
@@ -103,7 +184,31 @@
           </div>
         </div>
       </section>
+      <!-- Our Sponsors section -->
+      <section class="our-sponsor">
+        <div class="sponsor-info">
+          <h3 class="section-title">Our Sponsors</h3>
+          <p class="text-light-gray">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+            nemo nulla labore earum error. Libero.
+          </p>
+        </div>
+        <div class="sponsors-companies">
+          <img src="images/sponsors/amazon.png" alt="" />
+          <img src="images/sponsors/figma.png" alt="" />
+          <img src="images/sponsors/google.png" alt="" />
+          <img src="images/sponsors/spotify.png" alt="" />
+          <img src="images/sponsors/telerama.png" alt="" />
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="container">
+      <div class="footer-content bg-light">
+        <p>
+          All rights reserved by Morshed Alam || Copyright &copy; 2024 startup
+          landing page design
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
